--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
     "isbot": "^4.1.0",
+    "prisma": "^5.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
